# gastrotrain

./: .gitignore  README.md  pull_request_template.md  pyproject.toml
etc/: settings.toml  settings_template.toml
gastrotrain/src/: categorias.py  settings.py  train.py
src/: GastroClassify.ipynb  Polipos.ipynb  Proyecto.ipynb  __init__.py  categorias.py  cv.py  medios.py  spellcheck.py  train.py  trainpolipos.py
